<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.powerunit.demo</groupId>
	<artifactId>samples</artifactId>
	<version>@project.version@ </version>
	<name>Powerunit - Java Testing framework for JDK 1.8 - HelloWorld Maven</name>
	<packaging>jar</packaging>

	<properties>
		<maven.compiler.source>9</maven.compiler.source>
		<maven.compiler.target>9</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jaxb-api.version>2.3.0.1</jaxb-api.version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.6.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>ch.powerunittest.samples.FunctionSamplesTest</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>Test main 1</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.FunctionSamplesTest</argument>
								<argument>NOSQL</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>Test main 2</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.FunctionSamplesTest</argument>
								<argument>NOJAXB</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>Test main 3</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.FunctionSamplesTest</argument>
								<argument>NOXML</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>Test main 4</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>--add-modules</argument>
								<argument>java.sql</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.FunctionSamplesTest</argument>
								<argument>SQL</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>Test main 5</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>-cp</argument>
								<argument>${project.build.directory}/../../../local-repo/javax/xml/bind/jaxb-api/2.3.1/jaxb-api-2.3.1.jar${path.separator}${project.build.directory}/../../../local-repo/javax/com/sun/activation/javax.activation/1.2.0/javax.activation-1.2.0.jar${path.separator}${project.build.directory}/../../../local-repo/javax/com/sun/xml/bind/jaxb-core/2.3.1/jaxb-core-2.3.1.jar${path.separator}${project.build.directory}/../../../local-repo/javax/com/sun/xml/bind/jaxb-impl/2.3.1/jaxb-impl-2.3.1.jar</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.FunctionSamplesTest</argument>
								<argument>JAXB</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>Test main 6</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>java</executable>
							<longModulepath>false</longModulepath>
							<arguments>
								<argument>--module-path</argument>
								<argument>${project.build.directory}/../../../local-repo/ch/powerunit/extensions/powerunit-extensions-exceptions/@project.version@/powerunit-extensions-exceptions-@project.version@.jar${path.separator}${project.build.directory}/${project.build.finalName}.jar</argument>
								<argument>--add-modules</argument>
								<argument>java.xml</argument>
								<argument>--module</argument>
								<argument>powerunit.test/ch.powerunittest.samples.FunctionSamplesTest</argument>
								<argument>XML</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

	<dependencies>
		<dependency>
			<groupId>ch.powerunit.extensions</groupId>
			<artifactId>powerunit-extensions-exceptions</artifactId>
			<version>@project.version@</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>sax</groupId>
			<artifactId>sax</artifactId>
			<version>2.0.1</version>
		</dependency>
		
        <dependency>
            <groupId>com.sun.activation</groupId>
            <artifactId>javax.activation</artifactId>
            <version>1.2.0</version>
        </dependency>
 
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-core</artifactId>
            <version>2.3.1</version>
        </dependency>
 
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>2.3.2</version>
        </dependency>
	</dependencies>

</project>
